# gameviz-hyperkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  create_phase34_quality_tests.py  pyproject.toml
docs/: CLI_ERROR_MESSAGES.md  DEVELOPMENT.md  FINAL_PRE_RELEASE_AUDIT.md  FLAPPY_MINI_POLISH_PHASE49.md  GENERATED_PROJECT_SMOKE_TESTS.md  GENERATED_PROJECT_VALIDATION_PHASE55.md  MANUAL_QA_RESULT_TEMPLATE.md  PRODUCTION_TEMPLATE_POLISH_CHECKLIST.md  PROJECT_HEALTH_REPORT.md  PUZZLE_GAME_POLISH_PHASE51.md  QUICK_START_TUTORIAL.md  QUIZ_GAME_POLISH_PHASE52.md  RELEASE_BUILD_AUTOMATION.md  RELEASE_EVIDENCE_STRUCTURE.md  RELEASE_READINESS_CHECKLIST.md  RUNTIME_QA_TRACKER_PHASE58.md  SIMPLE_PHYSICS_POLISH_PHASE53.md  SWIPE_RUNNER_POLISH_PHASE50.md  TAP_COUNTER_POLISH_PHASE48.md  TEMPLATES.md  TEMPLATE_HELPERS.md  TEMPLATE_MANUAL_QA_CHECKLIST.md  TEMPLATE_MEDIA_GUIDE.md  TEMPLATE_POLISH_SUMMARY_PHASE54.md  TEMPLATE_QUALITY_CHECKLIST.md  TEMPLATE_RUNTIME_READINESS_PHASE56.md  TEMPLATE_SCREENSHOTS.md  TEMPLATE_STABILIZATION_CHECKLIST.md  TEMPLATE_VALIDATION.md  VERSION_HISTORY.md
examples/: README.md
my-flappy-game/: README.md  hyperkit.toml  main.py
tests/: test_android.py  test_animation.py  test_assets.py  test_audio.py  test_bounds.py  test_camera.py  test_camera_follow.py  test_changelog_phase36.py  test_cli_error_messages_phase45.py  test_cli_templates.py  test_collision.py  test_examples_syntax.py  test_final_qa_certification_phase65.py  test_flappy_mini_polish_phase49.py  test_flappy_mini_runtime_qa_phase60.py  test_game_object.py  test_generated_project_smoke_phase37.py  test_generated_project_validation_phase55.py  test_health_phase38.py  test_input_actions.py  test_layout.py  test_level.py  test_particle.py  (+38 more)
(+109 files in other folders)
